# medical_journal

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/crud/: admission.py  department.py  doctor.py  patient.py
app/api/routers/: admission.py  department.py  doctor.py  patient.py
app/database/: session.py
app/models/: admission.py  department.py  doctor.py  patient.py
app/schemas/: admission.py  department.py  doctor.py  patient.py
